<resources>
    <string name="app_name">Trivia</string>
    <string name="login_btn">login</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="menu">Menu</string>
    <string name="log_out_btn">Log out</string>
    <string name="start_game_btn">Start Game</string>
    <string name="table_score">Table Score</string>
    <string name="settings">Settings</string>
    <string name="new_user_sign_up">New User?Sign Up</string>
    <string name="quiz">Quiz</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="orientation_title">Orientation</string>
    <string name="night_mode_title">Night Mode</string>
    <string name="night_mode_deactivated">Night mode is deactivated</string>
    <string name="night_mode_activated">Night mode is activated</string>
    <string name="enable_night_mode_category">Enable Night Mode</string>
    <string name="screen_orientation_category">Screen Orientation</string>
    <string name="language_category">Language</string>
    <string name="all_language">All Language</string>

</resources>